--- a/home.twig
+++ b/home.twig
@@ -13,7 +13,9 @@
         <div class="wrapper clearfix">
             {{widget('extendednavigation', 'navigationheader', {})|raw}}
             {{widget('image', 'image', { 'src': asset('furcoat/images/my-image.jpg'), 'title': 'my image', 'alt': 'my image', 'fileName': 'my-image.jpg', 'fileSize': '58kb', 'imageSize': '960 x 640', 'imageWidth': '960px'})|raw}}
+            <div class="feature-button"> 
             {{widget('button', 'button', {italic: false, text:'button', 'align':'widget-align-center'})|raw}}
+            </div>
         </div>
     </div>
 </header>
