tweak in image widget

--- a/home.twig
+++ b/home.twig
@@ -12,7 +12,7 @@
     <div class="nav-feature">
         <div class="wrapper clearfix">
             {{widget('extendednavigation', 'navigationheader', {})|raw}}
-            {{widget('image', 'image', { 'src': asset('furcoat/images/my-image.jpg'), 'title': 'my image', 'alt': 'my image', 'fileName': 'my-image.jpg', 'fileSize': '58kb', 'imageSize': '960 x 640', 'imageWidth': '960px'})|raw}}
+            {{widget('image', 'image', { 'src': asset('chocolate/images/feature-img.jpg'), 'title': '', 'alt': '', 'fileName': 'feature-img.jpg', 'fileSize': '58kb', 'imageSize': '960 x 640', 'imageWidth': '960px'})|raw}}
             <div class="feature-button"> 
             {{widget('button', 'button', {italic: false, text:'button', 'align':'widget-align-center'})|raw}}
             </div>
