tweak in feature image widget

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -411,14 +411,11 @@ footer h4 {
 
 
    #page-zones__template-widgets__image-image {
-    float: left;
+    float: none;
    }
 
 
-  .nav-feature .widget.image img {
-  text-align: center;
-  margin: 0 auto;
-  }
+
 
 
 .nav-feature .widget.image .image-title {
