fixed navigation overlay on editor

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1781,6 +1781,13 @@ footer .widget.profile span, footer .widget.profile a{
     z-index: 9999;
   }
 
+  .widget.extendednavigation .bk-overlay {
+   width: 100%;
+  height: 38px;
+  float: right;
+  top: -39px !important;
+  }
+
   /* NAV ICON */
 
   .widget .extendednavigation a.pull {
