--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1,3 +1,6 @@
+@import templatecommon('/paypal.less');
+@import templatecommon('/dropbox.less');
+
 body {
   background-color: @color-swatch1;
   margin: 0;
@@ -1301,6 +1304,34 @@ hr.line.align-right {
   cursor: pointer;
   background-color: @font-swatch7-background-color-hover;
   cursor: pointer;
+}
+
+/* ===============================
+   DROPBOX BUTTON
+   =============================== */
+
+
+.widget.dropbox .b-wrap .btn {
+  padding: 15px 25px 15px 59px;
+  margin: 0;
+  background-image: image('/images/dropbox-icon.png');
+  background-repeat: no-repeat;
+  background-position: 23px 12px;
+  margin: 2.2em auto;
+  border: none;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+        -webkit-box-shadow: 0px 3px 0px darken(@color-swatch3,15%);
+    -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%); 
+    box-shadow:         0px 3px 0px darken(@color-swatch3,15%); 
+  font-family: @font-swatch7-font-family;
+  font-size:@font-swatch7-font-size;
+  font-weight:@font-swatch7-font-weight;
+  background-color: @font-swatch7-background-color;
+  color: @font-swatch7-color;
+  text-decoration: none;
+  text-transform: uppercase;
 }
 
 /* ===============================
