feature image float left

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -411,8 +411,8 @@ footer h4 {
    =============================== */
 
 
-   #page-zones__template-widgets__image-image {
-    float: none;
+   .feature-img-widget {
+    float: left;
    }
 
 
