--- a/home.twig
+++ b/home.twig
@@ -4,7 +4,7 @@
 
 <header>
     <div class="header-bg">
-         <div class="wrapper companyheader clearfix">
+         <div class="wrapper companyheaderwrap clearfix">
             {{widget('logo', 'logo', {"defaultlogo": asset('images/logo.png')})|raw}}
             {{widget('companyname', 'companyname', {"business": "profile"})|raw}}
         </div>
