--- a/stylesheet.less
+++ b/stylesheet.less
@@ -343,9 +343,6 @@ footer h4 {
 }
 
 .widget.extendednavigation ul li.folder {
-  background-image: image('/images/arrow-down.png');
-  background-position: right center;
-  background-repeat: no-repeat;
   height: 100%;
   cursor: pointer;
 }
@@ -1410,35 +1407,41 @@ hr.line.align-right {
 .svg .widget.socialicons span.bk-socialicons-twitter a,
 .svg .widget.profile .bk-profile-socialicons span.bk-socialicons-twitter a {
     background-image: image('/images/social/socialicons-twitter.svg');
-    background-position: 20px;
+    background-position: 10px;
+    padding: 20px;
+
 }
 
 .svg .widget.socialicons span.bk-socialicons-linkedin a,
 .svg .widget.profile .bk-profile-socialicons span.bk-socialicons-linkedin a {
-    padding: 15px 25px;
+    background-position: 10px;
+    padding: 20px;
 }
 
 .svg .widget.socialicons span.bk-socialicons-facebook a,
 .svg .widget.profile .bk-profile-socialicons span.bk-socialicons-facebook a {
     background-image: image('/images/social/socialicons-facebook.svg');
-    background-position: 20px;
+    background-position: 10px;
+    padding: 20px;
 }
 
 .svg .widget.socialicons span.bk-socialicons-rss a,
 .svg .widget.profile .bk-profile-socialicons span.bk-socialicons-rss a {
     background-image: image('/images/social/socialicons-rss.svg');
-    background-position: 20px;
+    background-position: 10px;
+    padding: 20px;
 }
 
 .svg .widget.socialicons span.bk-socialicons-googleplus a,
 .svg .widget.profile .bk-profile-socialicons span.bk-socialicons-googleplus a {
-     padding: 15px 25px;
+     padding: 20px;
 }
 
 .svg .widget.socialicons span.bk-socialicons-youtube a,
 .svg .widget.profile .bk-profile-socialicons span.bk-socialicons-youtube a {
     background-image: image('/images/social/socialicons-youtube.svg');
-    background-position: 20px;
+    background-position: 10px;
+    padding: 20px;
 }
 
 /* PNG ICONS */
