added new bootstrap styles

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -212,21 +212,12 @@ footer {
   text-align: center;
 }
 
-footer h1, footer h2, footer h3, footer h4 {
-  color: @color-swatch1;
-  padding-bottom: 20px;
-}
-
-footer p, footer .widget.profile span {
-  font-size: @font-swatch5-font-size;
-  font-family: @font-swatch5-font-family;
-  color: @color-swatch1;
-  line-height: 2em;
-  padding-bottom: 2px;
-}
-
-footer h4 {
-  padding-bottom: 8px;
+footer.bk-footer h1,
+footer.bk-footer h2,
+footer.bk-footer h3,
+footer.bk-footer h4 {
+    color: @color-swatch1;
+    padding-bottom: 30px;
 }
 
 
@@ -1278,17 +1269,18 @@ hr.line.align-right {
     box-shadow:         0px 3px 0px darken(@color-swatch3,15%); 
   font-family: @font-swatch7-font-family;
   font-size:@font-swatch7-font-size;
-  font-weight:@font-swatch7-font-weight;
+  font-weight:inherit;
   background-color: @font-swatch7-background-color;
   color: @font-swatch7-color;
   text-decoration: none;
 }
 
 .widget.tweet a:hover, .tweet a:active {
-  padding: 15px 25px 15px 38px;
   cursor: pointer;
   background-color: @font-swatch7-background-color-hover;
-  cursor: pointer;
+  background-repeat: no-repeat;
+  background-position: 13px 18px;
+  margin: 2.2em auto;
 }
 
 /* ===============================
@@ -1317,6 +1309,13 @@ hr.line.align-right {
   color: @font-swatch7-color;
   text-decoration: none;
 }
+
+.widget.dropbox a:hover, .dropbox a:active {
+  cursor: pointer;
+  background-color: darken(@color-swatch7,15%);
+  background-repeat: no-repeat;
+  background-position: 13px 18px;
+ }
 
 /* ===============================
    PAYPAL BUTTON
@@ -1347,6 +1346,70 @@ hr.line.align-right {
 
 .widget.paypalbuynow .widget.button.paypal:hover {
   background-color: @font-swatch7-background-color-hover;
+}
+
+/* ===============================
+  BLOG
+   =============================== */
+
+.widget {
+    &.bloglistposts {
+        .blog-post-item {
+            border-bottom: 1px dotted @color-swatch5;
+        }
+
+    }
+}
+
+.blog-post-item {
+    margin: 1.5em 0;
+    padding-bottom: 1em;
+    h2 {
+        a {
+            font-family: @font-swatch2-font-family;
+            font-size: @font-swatch2-font-size;
+            font-weight: @font-swatch2-font-weight;
+            line-height: @font-swatch2-line-height;
+            color: @font-swatch2-color;
+            letter-spacing: @font-swatch2-letter-spacing;
+            text-decoration: none;
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+    }
+}
+
+.blog-post-metadata {
+    background-color: transparent;
+    background-image: none;
+    margin-top: 0;
+    text-align: left;
+}
+
+.blog-list-footer {
+    background-color: transparent;
+    background-image: none;
+}
+
+.blog-post-more-link {
+    float: left;
+    width: 100%;
+}
+
+/* BLOG SEARCH */
+.blogsearch {
+    form {
+        button {
+            padding: 10px;
+            color: @font-swatch7-color;
+            font-size: @font-swatch6-font-size;
+            font-weight: @font-swatch6-font-weight;
+            line-height: @font-swatch6-line-height;
+            background-color: @font-swatch7-background-color;
+            border: none;
+        }
+    }
 }
 
 
@@ -2164,6 +2227,8 @@ footer .widget.profile span, footer .widget.profile a{
 
 .widget.clicktocall a:hover {
   background-color: @font-swatch7-background-color-hover;
+    background-position: 15px;
+  padding: 15px 25px 15px 40px;
   cursor: pointer;
   text-decoration: none;
 }
