--- a/stylesheet.less
+++ b/stylesheet.less
@@ -284,7 +284,7 @@ footer.bk-footer h4 {
 }
 
 .widget.extendednavigation a.pull {
-  display: none;
+  top:-77px;
 }
 
 .widget.extendednavigation ul.align-center li
@@ -1866,30 +1866,6 @@ footer .widget.profile span, footer .widget.profile a{
   top: -39px !important;
   }
 
-  /* NAV ICON */
-
-  .widget .extendednavigation a.pull {
-    display: block;
-    width: 100%;
-    position: absolute;
-    top: 22px;
-  }
-
-    .widget .extendednavigation a.pull:after {
-    content:"";
-    background: image('/images/nav-icon.png') no-repeat;
-    width: 30px;
-    height: 30px;
-    display: inline-block;
-    position: absolute;
-    right: 0px;
-    top: -50px;
-  }
-
-  .main .widget .extendednavigation a.pull {
-    display: none;
-  }
-
   #page-zones__template-widgets__extendednavigation-navigationheader {
     overflow: visible;
   }
@@ -2047,6 +2023,7 @@ footer .widget.profile span, footer .widget.profile a{
 
     .widget.responsiveslideshow .slideshow-widget-wrapper, .widget.responsiveslideshow .slideshow-image-list {
         height: 350px;
+        margin-bottom:36px;
     }
 
     .widget.responsiveslideshow .slideshow-widget-controls .dot {
