added     min-height:initial;

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1700,6 +1700,7 @@ footer .widget.profile span, footer .widget.profile a{
    =============================== */
 .widget.responsiveslideshow .slideshow-image-list {
     height: 500px;
+    min-height:initial;
 }
 
 .widget.responsiveslideshow .slideshow-widget {
@@ -2024,6 +2025,7 @@ footer .widget.profile span, footer .widget.profile a{
     .widget.responsiveslideshow .slideshow-widget-wrapper, .widget.responsiveslideshow .slideshow-image-list {
         height: 350px;
         margin-bottom:36px;
+        min-height:initial;
     }
 
     .widget.responsiveslideshow .slideshow-widget-controls .dot {
@@ -2163,6 +2165,7 @@ footer .widget.profile span, footer .widget.profile a{
 
     .widget.responsiveslideshow .slideshow-widget-wrapper, .widget.responsiveslideshow .slideshow-image-list {
         height: 250px;
+        min-height:initial;
     }
 
     .widget.responsiveslideshow .slideshow-widget .btn-prev, 
