nav styling fix

--- a/home.twig
+++ b/home.twig
@@ -11,7 +11,7 @@
     </div>
     <div class="nav-feature">
         <div class="wrapper clearfix">
-            {{widget('extendednavigation', 'navigationheader', {})|raw}}
+            {{widget('extendednavigation', 'navigationheader', {"align":"center"})|raw}}
             <div class="feature-img-widget">
             {{widget('image', 'image', { 'src': asset('images/feature-img.jpg'), 'title': '', 'alt': '', 'fileName': 'feature-img.jpg', 'fileSize': '58kb', 'imageSize': '960 x 640', 'imageWidth': '100%'})|raw}}
             </div>
