--- a/stylesheet.less
+++ b/stylesheet.less
@@ -356,7 +356,6 @@ footer.bk-footer h4 {
 .widget.extendednavigation ul li:hover > ul > li {
   display: block;
   width: 100%;
-  text-align: left;
 }
 
 .widget.extendednavigation ul li:hover > ul li a {
@@ -1938,7 +1937,6 @@ footer .widget.profile span, footer .widget.profile a{
 
   .widget.extendednavigation ul li:hover > ul > li {
      border-bottom: 2px solid @color-swatch1;
-     text-align: center;
   }
 
 
@@ -2000,6 +1998,10 @@ footer .widget.profile span, footer .widget.profile a{
   {
       width: 50%;
       padding-bottom: 50%;
+  }
+  .widget .extendednavigation ul.align-right li.folder:after {
+    left: 5px;
+    right: inherit;
   }
 
 }
