--- a/default.twig
+++ b/default.twig
@@ -11,7 +11,7 @@
     </div>
     <div class="nav-feature">
         <div class="wrapper clearfix">
-            {{widget('extendednavigation', 'navigationheader', {})|raw}}
+            {{widget('extendednavigation', 'navigationheader', {"align":"center"})|raw}}
         </div>
     </div>
 </header>
