nav icon ipad styling

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1781,6 +1781,13 @@ footer .widget.profile span, footer .widget.profile a{
     left: 5px;
     right: inherit;
   }
+  .widget .extendednavigation a.pull {
+    right:auto;
+    top:-25px;
+  }
+  .widget .extendednavigation a.pull:after {
+    left:0;
+  }
 
 }
 
