--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1784,6 +1784,9 @@ footer .widget.profile span, footer .widget.profile a{
   .widget .extendednavigation a.pull {
     right:auto;
     top:-25px;
+    margin: 0px auto;
+    display: table;
+    width: 52%;
   }
   .widget .extendednavigation a.pull:after {
     left:0;
@@ -1828,6 +1831,10 @@ footer .widget.profile span, footer .widget.profile a{
 
   .widget.contactform fieldset button.btn {
     width: 100%;
+  }
+
+  .widget .extendednavigation a.pull {
+    width: 55%;
   }
 
 
