iphone nav styling

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1625,6 +1625,10 @@ footer .widget.profile span, footer .widget.profile a{
     font-size:bkscale(@font-swatch1-font-size, 0.4)
   }
 
+  header .nav-feature {
+    margin-top:50px;
+  }
+
   /* NAV */
 
   .widget.extendednavigation {
@@ -1782,7 +1786,6 @@ footer .widget.profile span, footer .widget.profile a{
     right: inherit;
   }
   .widget .extendednavigation a.pull {
-    right:auto;
     top:-25px;
     margin: 0px auto;
     display: table;
