nav icon positioning

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1637,6 +1637,7 @@ footer .widget.profile span, footer .widget.profile a{
     display: block;
     float: left;
     z-index: 9999;
+    top:-30px;
   }
 
   .widget.extendednavigation .bk-overlay {
