--- a/stylesheet.less
+++ b/stylesheet.less
@@ -890,6 +890,10 @@ hr.line.align-right {
   text-decoration: underline;
 }
 
+.widget.twitter ul li span {
+    line-height: 50px;
+}
+
 
 /* ===============================
    CONTACT FORM WIDGET
@@ -1263,6 +1267,18 @@ time {
   }
 }
 
+.blog-post-feature-image-wrap {
+  width: 100%;
+  height: 300px;
+  overflow: hidden;
+  margin-bottom: 2em;
+  background-size: cover;
+  background-position: center;
+  img {
+    display: none;
+  }
+}
+
 /* ECOM*/
 
 .widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select {
@@ -1364,6 +1380,14 @@ select::-ms-expand {
   &:hover {
     background-color: @font-swatch7-background-color-hover;
   }
+}
+
+.widget.ecomcheckout .checkout-order-button {
+  margin: 20px 0px;
+}
+
+.widget.ecomcheckout .delivery .delivery-title {
+  padding-top: 30px;
 }
 
 /* ==================================
@@ -1568,14 +1592,18 @@ footer .widget.profile span, footer .widget.profile a{
     cursor: pointer;
 }
 
+.widget.profile form fieldset {
+    margin: 0px auto;
+    display: table;
+}
+
 
 /* ===============================
    MAP WIDGET
    =============================== */
 
 .widget.map  {
-  margin: 0px;
-  border: 1px solid @color-swatch4;
+  margin: 10px 0px;
 }
 
 
@@ -1850,6 +1878,14 @@ footer .widget.profile span, footer .widget.profile a{
 
   section.intro {
     display: none;
+  }
+
+  select {
+    width:100%;
+  }
+
+  .widget.ecomproductslist label {
+    display:block;
   }
 
   /*    FEATURE: Image widget + Button */
