dropdown arrow colour swatch

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -324,6 +324,10 @@ footer.bk-footer h4 {
     }
 }
 
+.widget .extendednavigation ul li.folder:after {
+  border-top-color:@font-swatch6-color;
+}
+
 /* EXTENDED NAVIGATION - INSIDE ZONE */
 
 .main .widget.extendednavigation {
