attempt to fix social icons

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1464,7 +1464,7 @@ select::-ms-expand {
 .widget.socialicons a,
 .widget.profile .bk-profile-socialicons a {
     text-decoration: none;
-    padding: 15px 25px 15px 52px;
+    padding: 0;
     font-family: @font-swatch7-font-family;
     font-size: @font-swatch7-font-size;
     font-weight:@font-swatch7-font-weight;
@@ -1477,7 +1477,8 @@ select::-ms-expand {
 }
 
 .widget.socialicons span a,
-.widget.profile .bk-profile-socialicons span a {
+.widget.profile .bk-profile-socialicons span a,
+footer .widget.profile .bk-profile-socialicons span a {
     display: inline-block;
     margin-right: 6px;
     margin-bottom: 8px;
@@ -1507,9 +1508,6 @@ select::-ms-expand {
 .svg .widget.socialicons span.bk-socialicons-twitter a,
 .svg .widget.profile .bk-profile-socialicons span.bk-socialicons-twitter a {
     background-image: image('/images/social/socialicons-twitter.svg');
-    background-position: 10px;
-    padding: 20px;
-
 }
 
 
