fix social icons background colour on hover state on footer

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1496,8 +1496,8 @@ footer .widget.profile .bk-profile-socialicons span a {
 }
 
 .widget.socialicons span a:hover,
-.widget.profile 
-.bk-profile-socialicons span a:hover {
+.widget.profile .bk-profile-socialicons span a:hover,
+footer .widget.profile .bk-profile-socialicons span a:hover {
     background-color: @font-swatch7-background-color-hover;
     cursor: pointer;
     color: @font-swatch7-color;
